2006-11-13 [colin]	2.6.0cvs41

	* src/plugins/pgpcore/sgpgme.c
		Maybe fix bug 1061, 'crash on opening 
		signed email'

2006-11-13 [wwp]	2.6.0cvs40

	* src/plugins/pgpinline/pgpinline.c
		fix candidate for bug #1057, thanks to Colin.

2006-11-13 [wwp]	2.6.0cvs39

	* src/compose.c
	* src/quote_fmt_parse.y
		fix bug 1052: current parser buffer was not always 
		allocated, ptr to this buffer could be returned as 
		NULL whereas no parser error has occurred. in 
		consequence, defining a template body as "%d" 
		(w/o the quotes) for the first time of the instance 
		of claws-mail, was reporting a parser error. make 
		sure that the buffer is always allocated, even to 
		an empty string.
		fix mis-unescaping in compose.:compose_quote_fmt(): 
		unescaping of the fmt string was always done 
		whereas it must be done *only* when receiving 
		quote format strings issued from the prefs 
		(compose new message, reply, forward, redirect 
		formats), *not* when applying templates.  in 
		consequences, applying templates w/ sequences 
		like \\|p{echo} were failing. make sure that 
		unescaping is done only when necessary.

2006-11-12 [colin]	2.6.0cvs38

	* po/de.po
		Fix typo (s/KB/MB)

2006-11-12 [colin]	2.6.0cvs37

	* src/plugins/pgpinline/pgpinline.c
	* src/plugins/pgpmime/pgpmime.c
		Release GPG context at the latest 
		possible moment. Maybe fixes 
		bug 1057, 'crash on sending signed 
		message to a newsgroup'
		

2006-11-12 [colin]	2.6.0cvs36

	* src/plugins/pgpcore/sgpgme.c
		Tell a bit more when gpg's status doesn't
		contain any signature

2006-11-12 [colin]	2.6.0cvs35

	* src/compose.c
		Fix bug 1060, 'compilation error with 
		Irix's cc'

2006-11-12 [paul]	2.6.0cvs34

	* doc/man/claws-mail.1
	* src/prefs_gtk.c
	* src/plugins/clamav/README
	* src/plugins/spamassassin/README
	* tools/README
	* tools/freshmeat_search.pl
	* tools/google_search.pl
	* tools/multiwebsearch.pl
		more renaming
	* src/plugins/trayicon/trayicon.c
		fix compiliation warning
